    effect.
  o Jimen Ching sent in a fix for multi-channel sound file processing
    using the avg effect.
  o Richards Bannister added patches to clean up prototypes and filter
    private sizes being to small.
  o Jimen Ching adds -d option to specify 64bit data size and changed
    Ulaw/Alaw encoding to default to 8bit data size if not specified.

sox-12.17.3
-----------
  o Removed check that prevented pan from being invoked when the
    input and output channels were the same.
  o Ciaran Anscomb added a flush to sunaudio driver after changing
    settings.  This is because it can start buffering data as soon
    as the device is open and the buffered data can be in a
    wrong format.
  o trim wasn't accounting for # of channels and was generally broken.
  o Jeff Bonggren fixed trim bugs were it was failing when triming
    data that equaled to BUFSIZ.  Also, trim now immediately returns
    ST_EOF when its done instead of requiring an extra call that
    returns no data.
  o auto effect wasn't rewinding the file if the file was less then
    132 bytes.  Changed auto parsing of header to be incremental
    instead of reading in a large buffer.
  o William Plant pointed out a bad pointer access in fade effect's
    parsing of options.
  o Ken pointed out a problem were private data was not 8-byte aligned
    and causing crashes on most RISC CPU's.  Fixed by going back to
    old style of declaring private data as type "double" which usually
    forces strictest alignment.
  o ima_rw was miscompiling on alpha's because of a header ordering
    problem.
  o Erik de Castro Lopo pointed out that when writing 16-bit VOC files
    the headers did not contain the correct length or encoding type.
  o Seperated st.h into 2 files.  st.h for libst users and st_i.h for
    internal use.
  o Added new types used extensively by libst: st_sample_t & st_size_t.
    This allows for more deterministic behavior on 64-bit machines and