@@ -21,8 +21,9 @@ SRCDIR	= sox-12.17.3
 
 FOBJ	= 8svx.o adpcm.o aiff.o alsa.o au.o auto.o avr.o cdr.o cvsd.o dat.o \
 	  g711.o g721.o g723_16.o g723_24.o g723_40.o g72x.o gsm.o hcom.o \
-	  ima_rw.o maud.o mp3.o nulfile.o oss.o raw.o sf.o smp.o sndrtool.o \
-	  sphere.o sunaudio.o tx16w.o voc.o vorbis.o wav.o wve.o
+	  ima_rw.o maud.o mp3.o nulfile.o oss.o prc.o raw.o sf.o smp.o \
+	  sndrtool.o sphere.o sunaudio.o tx16w.o voc.o vorbis.o \
+          wav.o wve.o
 
 EOBJ    = avg.o band.o bandpass.o breject.o btrworth.o chorus.o compand.o \
           copy.o dcshift.o deemphas.o earwax.o echo.o echos.o fade.o \
