@@ -478,6 +478,12 @@ input file.  It is suggested to always override the output values to use
 the highest quality samples your sound card can handle.  Example:
 .I -t ossdsp -w -s /dev/dsp
 .TP 10
+.B .prc
+Psion record.app
+.br
+Used in some Psion devices for System alarms.  This format is newer then
+the .wve format that is used in some Psion devices.
+.TP 10
 .B .sf
 IRCAM Sound Files.
 .br
